--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+    <meta charset="utf-8">
+    <!-- 页面标题 -->
+    <title>
+        {% block title %}
+            Cack|主页
+        {% endblock %}
+    </title>
 
+    {% block styles %}  <!-- 样式区 -->
+{#        <link rel="shortcut icon" href="{{ url_for('static', filename='icon/ink_256.ico') }}"/>  <!--logo-->#}
+        <link rel="stylesheet" charset="utf-8" type="text/css" href="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.css"/>
+    {% endblock %}
+
+</head>
+
+<body>
+    <div class="ui main container">
+        {% block navigation %}  <!-- 导航区 -->
+        {% endblock %}
+
+        {% block content %}  <!-- 内容区 -->
+        {% endblock %}
+    </div>
+
+    <footer>
+        {% block footer %}  <!-- 页脚区 -->
+        {% endblock %}
+    </footer>
+
+    {% block scripts %}  <!-- js脚本区 -->
+        <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
+        <script src="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.js"></script>
+    {% endblock %}
 </body>
 </html>
