--- a/templates/base.html
+++ b/templates/base.html
@@ -12,18 +12,74 @@
     {% block styles %}  <!-- 样式区 -->
 {#        <link rel="shortcut icon" href="{{ url_for('static', filename='icon/ink_256.ico') }}"/>  <!--logo-->#}
         <link rel="stylesheet" charset="utf-8" type="text/css" href="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.css"/>
+        <style>
+            #user_info:hover,
+            #my_orders:hover,
+            #shopping_cart:hover,
+            #tickets:hover,
+            #favorites:hover,
+            #settings:hover,
+            #sign_out:hover {
+                color: white!important;
+                background-color: #00B5AD!important;
+                outline: 1px solid rgba(34,36,38,.15)!important;
+            }
+        </style>
     {% endblock %}
 
+    {#宏#}
+    {% macro navigation(active='home') %}
+        <div class="ui inverted menu">
+            <div class="ui container">
+                <a class="teal item {{ 'active' if active == 'home' else '' }}">
+                    <i class="home icon"></i> cack
+                </a>
+                <a class="teal item {{ 'active' if active == 'shop' else '' }}">
+                    <i class="shop icon"></i> 商品
+                </a>
+                <a class="teal item {{ 'active' if active == 'users' else '' }}">
+                    <i class="users icon"></i> 朋友
+                </a>
+                <a class="teal item {{ 'active' if active == 'comment' else '' }}">
+                    <i class="comment icon"></i> 事件
+                </a>
+
+                <div class="right menu">
+                    {% if current_user.is_authenticated %}
+                        <a class="ui black label">
+                            <div class="ui inline combo top right pointing dropdown">
+                                <img class="ui right spaced avatar image" src="http://www.semantic-ui.cn/images/avatar/small/elliot.jpg">
+                                Elliot
+                                <i class="dropdown icon"></i>
+                                <div class="menu">
+                                    <div class="item" id="user_info"><i class="edit icon"></i> 用户信息 </div>
+                                    <div class="item" id="my_orders"><i class="file text icon"></i> 我的订单 </div>
+                                    <div class="item" id="shopping_cart"><i class="add to cart icon"></i> 购物车 </div>
+                                    <div class="item" id="tickets"><i class="bookmark icon"></i> 卡券 </div>
+                                    <div class="item" id="favorites"><i class="star icon"></i> 收藏夹 </div>
+                                    <div class="item" id="settings"><i class="settings icon"></i> 设置 </div>
+                                    <div class="ui divider"></div>
+                                    <div class="item" id="sign_out"><i class="sign out icon"></i> 注销 </div>
+                                </div>
+                            </div>
+                        </a>
+                    {% else %}
+                        <a class="teal item {{ 'active' if active == 'sign in' else '' }}"><i class="sign in icon"></i> 登录 </a>
+                        <a class="teal item {{ 'active' if active == 'edit' else '' }}"><i class="edit icon"></i> 注册 </a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    {% endmacro %}
 </head>
 
 <body>
-    <div class="ui main container">
-        {% block navigation %}  <!-- 导航区 -->
-        {% endblock %}
+    {% block navigation %}  <!-- 导航区 -->
+        {{ navigation() }}
+    {% endblock %}
 
-        {% block content %}  <!-- 内容区 -->
-        {% endblock %}
-    </div>
+    {% block content %}  <!-- 内容区 -->
+    {% endblock %}
 
     <footer>
         {% block footer %}  <!-- 页脚区 -->
@@ -34,6 +90,13 @@
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
         <script src="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $('.dropdown').dropdown({
+                     action: 'combo'
+                });
+            });
+        </script>
     {% endblock %}
 </body>
 </html>
