--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    <form action="/auth/login" method="post">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
-        <input type="text" name="username" />
-        <input type="password" name="password" />
-        <input type="checkbox" value="1">
-        <input type="submit" value="登录">
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+    Cack|登录
+{% endblock %}
+
+{% block navigation %}
+    {{ navigation(category) }}
+{% endblock %}
+{#    <form action="/auth/login" method="post">#}
+{#        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />#}
+{#        <input type="text" name="username" />#}
+{#        <input type="password" name="password" />#}
+{#        <input type="checkbox" value="1">#}
+{#        <input type="submit" value="登录">#}
+{#    </form>#}
