--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -7,3 +7,42 @@
 {% block navigation %}
     {{ navigation(category) }}
 {% endblock %}
+
+{% block content %}
+    <form class="ui teal form segment ui center aligned attached" id="register_form" method="post">
+        <h3><i class="ui edit icon"></i>注册</h3>
+        <div class="filed">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
+        </div>
+        <div class="field">
+            <div class="ui left icon input">
+                <input type="text" name="username" placeholder="用户名">
+                <i class="user icon"></i>
+            </div>
+        </div>
+        <div class="field">
+            <div class="ui left icon input">
+                <input type="password" name="password" placeholder="密码">
+                <i class="lock icon"></i>
+            </div>
+        </div>
+        <div class="field">
+            <div class="ui left icon input">
+                <input type="password" name="password" placeholder="重复密码">
+                <i class="lock icon"></i>
+            </div>
+        </div>
+        <div class="field">
+            <div class="ui left icon input">
+                <input type="email" name="password" placeholder="邮箱">
+                <i class="mail icon"></i>
+            </div>
+        </div>
+    </form>
+    <div class="ui bottom attached teal button" tabindex="0" id="register">提交</div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='js/auth/register.js') }}"></script>
+{% endblock %}
