--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     </title>
 
     {% block styles %}  <!-- 样式区 -->
-{#        <link rel="shortcut icon" href="{{ url_for('static', filename='icon/ink_256.ico') }}"/>  <!--logo-->#}
         <link rel="stylesheet" charset="utf-8" type="text/css" href="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.css"/>
+        <link rel="stylesheet" href="//cdn.bootcss.com/jBox/0.4.7/jBox.css">
         <style>
             #user_info:hover,
             #my_orders:hover,
@@ -78,8 +78,11 @@
         {{ navigation() }}
     {% endblock %}
 
-    {% block content %}  <!-- 内容区 -->
-    {% endblock %}
+    <div class="ui main container">
+        <!-- messages -->
+        {% block content %}  <!-- 内容区 -->
+        {% endblock %}
+    </div>
 
     <footer>
         {% block footer %}  <!-- 页脚区 -->
@@ -88,9 +91,11 @@
 
     {% block scripts %}  <!-- js脚本区 -->
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+        <script src="//cdn.bootcss.com/jBox/0.4.7/jBox.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
         <script src="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.js"></script>
         <script>
+            var msgs = {{ get_flashed_messages() | tojson }};
             $(document).ready(function () {
                 $('.dropdown').dropdown({
                      action: 'combo'
