--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
 
     {% block styles %}  <!-- 样式区 -->
         <link rel="stylesheet" charset="utf-8" type="text/css" href="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.css"/>
-        <link rel="stylesheet" href="//cdn.bootcss.com/jBox/0.4.7/jBox.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='lib/jBox/Source/jBox.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='lib/jBox/Source/plugins/Notice/jBox.Notice.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='lib/jBox/Source/themes/NoticeFancy.css') }}">
         <style>
             #user_info:hover,
             #my_orders:hover,
@@ -91,15 +93,29 @@
 
     {% block scripts %}  <!-- js脚本区 -->
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-        <script src="//cdn.bootcss.com/jBox/0.4.7/jBox.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
         <script src="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.js"></script>
+
+        <script src="{{ url_for('static', filename='lib/jBox/Source/jBox.js') }}"></script>
+        <script src="{{ url_for('static', filename='lib/jBox/Source/plugins/Notice/jBox.Notice.js') }}"></script>
         <script>
             var msgs = {{ get_flashed_messages() | tojson }};
             $(document).ready(function () {
                 $('.dropdown').dropdown({
                      action: 'combo'
                 });
+                for(var index in msgs){
+                    var msg = msgs[index];
+                    new jBox('Notice', {
+                        attributes: {
+                          x: 'right',
+                          y: 'bottom'
+                        },
+                        color: 'red',
+                        content: msg,
+                        animation: {open: 'slide:bottom', close: 'slide:right'}
+                    });
+                }
             });
         </script>
     {% endblock %}
