--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -66,8 +66,8 @@
                 </form>
 
                 <div class="ui message">
-                    加入cack? <a href="{{ url_for('auth.register') }}">注册</a>|
-                    <a href="{{ url_for('auth.register') }}">忘记登录密码？</a>
+                    加入cack? <a href="{{ url_for('auth.register') }}" style="color: #00B5AD">注册</a>|
+                    <a href="{{ url_for('auth.register') }}" style="color: #36648B">忘记登录密码？</a>
                 </div>
             </div>
         </div>
