add find password

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -67,7 +67,7 @@
 
                 <div class="ui message">
                     加入cack? <a href="{{ url_for('auth.register') }}" style="color: #00B5AD">注册</a>|
-                    <a href="{{ url_for('auth.register') }}" style="color: #36648B">忘记登录密码？</a>
+                    <a href="{{ url_for('auth.forget_password') }}" style="color: #36648B">忘记登录密码？</a>
                 </div>
             </div>
         </div>
