--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block navigation %}
-    {{ navigation(category) }}
+{% block title %}
+    Cack|主页
 {% endblock %}
 
-{% block content %}  <!-- 内容区 -->
-    {{ embed_html('embed_templates/editor.html') }}
+{% block navigation %}
+    {{ navigation(category) }}
 {% endblock %}
