--- a/templates/friends/index.html
+++ b/templates/friends/index.html
@@ -20,8 +20,11 @@
 
 {% block content %}  <!-- 内容区 -->
     <div >
-        <div class="ui teal stacked segment" style="position: fixed;height: 80%;width: 16%;left:2%;background-color: white;">
+        <div class="ui black stacked segment" style="position: fixed;height: 80%;width: 16%;left:2%;background-color: white;">
             <!-- 朋友列表 -->
+            <a class="ui teal teal ribbon label">
+                <i class="users icon"></i>朋友列表
+            </a>
         </div>
 
         <div class="container" style="width: 60%;margin-left: 20%">
@@ -31,7 +34,7 @@
 
         <div class="ui piled segment" style="width: 60%;margin-left: 20%;">
             <a class="ui teal teal ribbon label">
-                <i class="edit icon"></i>动态
+                <i class="talk outline icon"></i>动态
             </a>
 
             <div class="ui basic center aligned segment">
