--- a/templates/embed_templates/editor.html
+++ b/templates/embed_templates/editor.html
@@ -28,7 +28,7 @@
     }
 </style>
 
-<div class="ui segment">
+<div class="ui black segment">
     <div id="ueditor-container">
     </div>
     <div id="word_count">
@@ -247,9 +247,9 @@
                     for(var i in data){
                         $('#trends').append('<div class="ui black raised segment trend">' +
                             '<div class="ui feed"><div class="event"><div class="label"><img src="{{ current_user.avatar }}">'+
-                            '</div><div class="content"><div class="summary"><a class="user">{{ current_user }}</a>'+
+                            '</div><div class="content"><div class="summary"><a class="user">{{ current_user.nickname }}</a>'+
                             '<div class="date">'+ data[i]['created_at'] +'</div></div><div class="extra text">'+ data[i]['content'] +
-                            '</div><div class="meta"><a class="like"><i class="like icon"></i> 4 </a></div></div></div></div><div class="ui divider"></div></div>');
+                            '</div><div class="meta"><a class="like"><i class="like icon"></i> 4 </a></div></div></div></div></div>');
                     }
                 }
                 $('#trends-loading').removeClass('active');
