--- a/templates/embed_templates/editor.html
+++ b/templates/embed_templates/editor.html
@@ -195,7 +195,7 @@
             </ul>
         </div>
 
-        <div class="circular ui icon teal button img-btn" title="图片">
+        <div class="circular ui icon teal button img-btn" title="图片" onclick="show_uploader_box()">
             <i class="image icon"></i>
         </div>
 
@@ -212,13 +212,18 @@
             <div class="hidden content"><i class="share icon"></i></div>
         </div>
     </div>
+
+    <div>
+        {{ embed_html('embed_templates/uploader.html') }}
+    </div>
+
 </div>
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='lib/ueditor/ueditor.config.js') }}"></script>
 <script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='lib/ueditor/ueditor.all.min.js') }}"> </script>
 <script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='lib/ueditor/lang/zh-cn/zh-cn.js') }}"></script>
-<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/common/uediter.js') }}"></script>
+<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/common/ueditor.js') }}"></script>
 <script src="//twemoji.maxcdn.com/2/twemoji.min.js"></script>
 <script>
     function cancelTopDisplay(tid) {
@@ -327,8 +332,8 @@
     }
 
     function cancel(obj) {
+        var tid = $(obj).parent().data('tid');
         $(obj).hide();
-        var tid = $(this).parent().data('tid');
         cancelTopDisplay(tid);
         loadTrends();
     }
@@ -358,7 +363,7 @@
             $('#emoji-list').hide();
         }
     });
-    
+
     $('img.emoji').click(function () {
         addEmoji(this);
     });
@@ -395,4 +400,12 @@
             }
         });
     });
+
+    function show_uploader_box() {
+        $('#uploader-box').transition('vertical flip')
+    }
+
+    function closeUploaderBox() {
+        $('#uploader-box').transition('vertical flip')
+    }
 </script>
