--- a/templates/friends/index.html
+++ b/templates/friends/index.html
@@ -76,10 +76,23 @@
 {#                                    </div>#}
 {#                                    <div class="summary"><a class="user"> Elliot Fu </a> added you as a friend <div class="date">1 Hour Ago </div>#}
 {#                                    </div>#}
-{#                                    <div class="extra text">I'm having a BBQ this weekend. Come by around 4pm if you can.</div>#}
+{#                                    <div class="extra text">#}
+{#                                        I'm having a BBQ this weekend. Come by around 4pm if you can.#}
+{#                                    </div>#}
 {#                                    <div class="meta">#}
 {#                                        <a class="like"><i class="like icon"></i> 4 </a>#}
 {#                                    </div>#}
+{##}
+{#                                    <div id="imageList" class="ui grid" style="text-align: center;margin-top: 2%">#}
+{#                                        <div class="four wide column" style="">#}
+{#                                            <div class="ui fluid image">#}
+{#                                                <img class="ui small rounded bordered image trend-image"#}
+{#                                                src="http://ojysw795f.bkt.clouddn.com/589d8363f3051f55f4f93729"#}
+{#                                                     title="" style="cursor:pointer;width: 150px;height: 150px">#}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{##}
 {#                                </div>#}
 {#                            </div>#}
 {#                        </div>#}
