--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -33,4 +33,5 @@
             title    : 'New to us?Sign Up'
         });
     </script>
+    <script src="{{ url_for('static', filename='js/auth/login.js') }}"></script>
 {% endblock %}
